[ext_resource type="Script" path="res://scripts/ui/PlanningPhase.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://blueprint_bg" path="res://assets/ui/blueprint_bg.png" id="2_blueprint"]

[node name="PlanningPhase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopPanel" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
color = Color(0.1, 0.1, 0.12, 0.85)

[node name="GlassBorder" type="ReferenceRect" parent="VBoxContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.3, 0.6, 1, 0.3)
editor_only = false
border_width = 1.5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinimapContainer" type="Control" parent="VBoxContainer/TopPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="MinimapBG" type="ColorRect" parent="VBoxContainer/TopPanel/MinimapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MinimapTexture" type="TextureRect" parent="VBoxContainer/TopPanel/MinimapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ViewportRect" type="ReferenceRect" parent="VBoxContainer/TopPanel/MinimapContainer"]
layout_mode = 0
border_color = Color(1, 0, 0, 1)
border_width = 2.0
editor_only = false

[node name="BottomMenu" type="ColorRect" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
color = Color(0.05, 0.05, 0.07, 1)

[node name="BlueprintBG" type="TextureRect" parent="VBoxContainer/BottomMenu"]
modulate = Color(1, 1, 1, 0.15)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_blueprint")
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="DPadContainer" type="GridContainer" parent="VBoxContainer/BottomMenu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 3

[node name="Empty1" type="Control" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
layout_mode = 2

[node name="BtnUp" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "‚Üë"

[node name="Empty2" type="Control" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
layout_mode = 2

[node name="BtnLeft" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "‚Üê"

[node name="BtnDown" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "‚Üì"

[node name="BtnRight" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/DPadContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "‚Üí"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/BottomMenu/HBoxContainer"]
layout_mode = 2

[node name="ActionsContainer" type="HBoxContainer" parent="VBoxContainer/BottomMenu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BtnUse" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
text = "POU≈Ω√çT üõ†Ô∏è"

[node name="BtnOpen" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
text = "OTEV≈ò√çT üö™"

[node name="BtnPick" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
text = "P√ÅƒåIT üîì"

[node name="BtnWait" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
text = "ƒåEKAT ‚è≥"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/BottomMenu/HBoxContainer"]
layout_mode = 2

[node name="SimContainer" type="HBoxContainer" parent="VBoxContainer/BottomMenu/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnSimulate" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/SimContainer"]
custom_minimum_size = Vector2(100, 64)
layout_mode = 2
text = "SIMULACE üìΩÔ∏è"

[node name="BtnExecute" type="Button" parent="VBoxContainer/BottomMenu/HBoxContainer/SimContainer"]
custom_minimum_size = Vector2(100, 64)
layout_mode = 2
text = "PROV√âST üï∂Ô∏è"


